2002-05-13  Marcus Brinkmann  <marcus@gnu.org>

	* devprobe.c: Include <version.h>.
	(argp_program_version): New variable.
	* storecat.c: Include <version.h>.
	(argp_program_version): New variable.
	* storeread.c: Include <version.h>.
	(argp_program_version): New variable.
	* gcore.c: Include <version.h>.
	(argp_program_version): New variable.

2002-05-12  Roland McGrath  <roland@frob.com>

	* fakeroot.sh: Inside the chroot'd fakeauth environment,
	run a shell that chdir's to what was our original current
	directory (by name) before exec'ing the user's command.

	* fakeauth.c (main): Don't use posix_spawnp.  Use _hurd_exec instead.

2002-05-06  Marcus Brinkmann  <marcus@gnu.org>

	* settrans.c (main): Return 0 instead of using break (which only
	gets us out of the while loop).

2002-05-05  Marcus Brinkmann  <marcus@gnu.org>

	* fakeauth.c (main): Add ARGP_IN_ORDER to argp_parse invocation.
	(main: parse_opt): New function.
	(main): Set parser in ARGP to parse_opt.

2002-05-04  Roland McGrath  <roland@frob.com>

	* fakeauth.c (main): Update doc strings, clean up argp_parse call.

	* fakeroot.sh: New file.
	* Makefile (targets, special-targets, SRCS): Add it.

	* settrans.c (options): Add --chroot/-C option.
	(main_opt): Parse that option, take following args until "--"
	as a command to exec chroot'd to the translated node.

2002-05-03  Roland McGrath  <roland@frob.com>

	* msgport.c (str2flags): Add break after default: label.

	* vmstat.c (print_val): Use %lld printf format for val_t.

	* fakeauth.c: New file.
	* Makefile (fakeauth): New target.
	(targets): Add it.
	(SRCS): Add fakeauth.c.
	(auth-MIGSFLAGS, fakeauth-CPPFLAGS, authServer-CPPFLAGS,
	auth_requestUser-CPPFLAGS): New variables.

	* shd.c: Include <error.h> for `error' decl.

	* Makefile (rpctrace): Put libthreads before libports.

2002-03-23  James A. Morrison  <ja2morri@uwaterloo.ca>

	* rpctrace.c (parse_msgid_list): Use ERR, not errno.
	* shd.c (reap): Use error, not perror.
	(command): Likewise.